@@ -1,10 +1,18 @@
 <?php
-// $Id: views-view.tpl.php,v 1.13.4.1 2009-11-02 22:01:27 merlinofchaos Exp $
+// $Id: views-view.tpl.php,v 1.13.4.2 2010-03-25 18:44:36 merlinofchaos Exp $
 /**
  * @file views-view.tpl.php
  * Main view template
  *
  * Variables available:
+ * - $classes_array: An array of classes determined in
+ *   template_preprocess_views_view(). Default classes are:
+ *     .view
+ *     .view-[css_name]
+ *     .view-id-[view_name]
+ *     .view-display-id-[display_name]
+ *     .view-dom-id-[dom_id]
+ * - $classes: A string version of $classes_array for use in the class attribute
  * - $css_name: A css-safe version of the view name.
  * - $header: The view header
  * - $footer: The view footer
@@ -20,7 +28,7 @@
  * @ingroup views_templates
  */
 ?>
-<div class="view view-<?php print $css_name; ?> view-id-<?php print $name; ?> view-display-id-<?php print $display_id; ?> view-dom-id-<?php print $dom_id; ?>">
+<div class="<?php print $classes; ?>">
   <?php if ($admin_links): ?>
     <div class="views-admin-links views-hide">
       <?php print $admin_links; ?>
